--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,9 @@
     "eruda-dom": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "peerDependencies": {
     "@babel/runtime": "^7.5.5",
